# c---sdl-project

./: .gitignore  CMakeLists.txt  README.md  bin  configure.sh  setup.sh
src/implements/: game.cpp  main.cpp
src/implements/management/: assetManager.cpp  recipeManager.cpp
src/implements/player/: camera.cpp
src/implements/renderer/: renderer.cpp  textRenderer.cpp  windowRenderer.cpp
src/implements/world/: world.cpp
src/implements/world/objects/: machine.cpp
src/includes/: Game.hpp
src/includes/management/: AssetManager.hpp  RecipeManager.hpp  Registry.hpp
src/includes/math/: Math.hpp  Vectors.hpp
src/includes/player/: Camera.hpp
src/includes/renderer/: Context.hpp  Renderer.hpp  TextRenderer.hpp  WindowRenderer.hpp
src/includes/world/: World.hpp
src/includes/world/objects/: Machine.hpp  MachineType.hpp  Tile.hpp
src/includes/world/storage/: Inventory.hpp
